# aiopegelonline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: release.yaml  test.yml
aiopegelonline/: __init__.py  const.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  const.py  test_aiopegelonline.py
