[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopegelonline"
version = "0.1.1"
description = "Asynchronous library to retrieve data from PEGELONLINE."
authors = [{ name = "mib1185" }]
readme = "README.md"
license.text = "Apache-2.0"
requires-python = '>=3.9'
dependencies = ["aiohttp"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = 'https://github.com/mib1185/aiopegelonline'
repository = 'https://github.com/mib1185/aiopegelonline'

[tool.setuptools]
package-data = { "aiopegelonline" = ["py.typed"] }
platforms = ["any"]
packages = ["aiopegelonline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
